<resources>
    <string name="app_name">StampLib</string>
    <string name="title_home">Меню</string>
    <string name="title_dashboard">Обзор</string>
    <string name="title_notifications">Моя коллекция</string>
    <string name="about">Добро пожаловать в Stamp Lib,\nприложение-помощник для\nколлекционеров почтовых марок!</string>
    <string name="detection">Определить марку</string>
    <string name="articles">Статьи</string>
    <string name="settings">Настройки</string>
    <string name="lang">Язык</string>
    <string name="series_image">Изображение серии</string>
    <string name="stamp_image">Изображение марки</string>
    <string name="stamp_grid_desc">Список марок серии</string>
    <string name="yearOf">Год выпуска:</string>
    <string name="printType">Тип печати:</string>
    <string name="paper">Бумага:</string>
    <string name="waterMark">Водяной знак:</string>
    <string name="perfType">Тип перфорации:</string>
    <string name="perfSize">Размер перфорации:</string>
    <string name="Base_txt">База данных</string>
    <string name="Update_txt">Обновить базу данных</string>
    <string name="back_button_desc">Назад</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="nickname_hint">Имя</string>
    <string name="profSettings">Настройки профиля</string>
    <string name="nowName">Введите новое имя</string>
    <string name="saveName">Сохранить имя</string>
    <string name="dropPass">Сбросить пароль</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="invites">Заявки в друзья</string>
    <string name="inInvite">Входящие заявки</string>
    <string name="outInvite">Исходящие заявки</string>
    <string name="logIn">Вход</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="logInDif">Войти</string>
    <string name="myCollection">Моя коллекция</string>
    <string name="RI">РИ</string>
    <string name="RSFSR">РСФСР</string>
    <string name="friendCode">Введите код друга</string>
    <string name="sendInvite">Отправить приглашение</string>
    <string name="notification">Уведомления</string>
    <string name="noFriendsNow">Друзей пока нет</string>
    <string name="serverProgress">Сервер обрабатывает ваше фото</string>
    <string name="signIn">Регистрация</string>
    <string name="result">Результат обработки</string>
    <string name="variants">Варианты распознавания:</string>
    <string name="enterYear">Введите год выпуска марок</string>
    <string name="examleHint">Например: 1857</string>
    <string name="series">Найденные серии:</string>
    <string name="RusImp">Российская империя</string>
    <string name="enterHintRSFSR">Например: 1918</string>
    <string name="name">Название:</string>
    <string name="inCollection">Добавить в коллекцию</string>
    <string name="outCollection">Удалить из коллекции</string>
    <string name="stampsOfRus">Почтовые марки России</string>
    <string name="logInFor">Войдите в аккаунт, чтобы увидеть коллекцию</string>
    <string name="achiv">Достижения</string>
    <string name="stamps_collected">марок собрано</string>
    <string name="series_collected">серий собрано</string>
    <string name="friends_count">друзей</string>
    <string name="myFriends">Мои друзья</string>
    <string name="friend_collection">Коллекция друга</string>

</resources>