<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:gravity="center"
        android:fontFamily="@font/comfortaa_medium"
        android:textSize="25sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/log"
        android:fontFamily="@font/comfortaa_medium"/>

    <EditText
        android:id="@+id/passwordInput"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_medium"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logInDif"
        android:textColor="@color/black"
        android:fontFamily="@font/comfortaa_medium"
        android:background="@drawable/btns"
        android:layout_marginTop="24dp" />
</LinearLayout>
