<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/inputBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:gravity="center"
            android:fontFamily="@font/comfortaa_medium"
            android:textSize="25sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nicname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname_hint"
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:fontFamily="@font/comfortaa_medium"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/reg" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/comfortaa_medium" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/comfortaa_medium" />

        <Button
            android:id="@+id/registerSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/register"
            android:layout_marginTop="24dp"
            android:background="@drawable/btns"
            android:fontFamily="@font/comfortaa_medium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
