<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageButton
        android:id="@+id/settingsBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_settings_24"
        android:scaleType="fitCenter"
        android:contentDescription="@string/settings"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="3dp"/>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/settingsBtn"
        app:layout_constraintBottom_toTopOf="@id/collectionLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/RegLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logInFor"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/comfortaa_light"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btns"
            android:text="@string/logInDif"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/comfortaa_medium" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btns"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/comfortaa_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collectionLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/loginLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/nicknameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NICKNAME"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/comfortaa_medium"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/userCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#123456"
            android:textSize="14sp"
            android:textColor="#888888"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/comfortaa_light"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_border"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achiv"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/comfortaa_medium"/>

            <TextView
                android:id="@+id/stampsCollectedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stamps_collected"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/comfortaa_light"/>

            <TextView
                android:id="@+id/seriesCollectedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series_collected"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/comfortaa_light"/>

            <TextView
                android:id="@+id/friendsCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/friends_count"
                android:fontFamily="@font/comfortaa_light"/>
        </LinearLayout>

        <Button
            android:id="@+id/collectionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myCollection"
            android:background="@drawable/btns"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/comfortaa_medium"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myFriends"
            android:background="@drawable/btns"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/comfortaa_medium"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
