<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="227dp"
        android:layout_height="186dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/descrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLogo"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_light"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/find"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        android:background="@drawable/btns"
        android:gravity="center"
        android:text="@string/detection"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/descrip"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/comfortaa_medium"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/lect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        android:background="@drawable/btns"
        android:gravity="center"
        android:text="@string/articles"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/find"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/comfortaa_medium"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        android:background="@drawable/btns"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/lect"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/comfortaa_medium"
        android:layout_marginEnd="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>