<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyCollectionActivity">

    <TextView
        android:id="@+id/collection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myCollection"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/comfortaa_medium"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ri_my_btn"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/btns"
        android:paddingBottom="45dp"
        android:paddingTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ri_preview"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintTop_toBottomOf="@id/collection_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.47" />

    <TextView
        android:id="@+id/stamps_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RI"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:fontFamily="@font/comfortaa_medium"
        app:layout_constraintBottom_toBottomOf="@id/ri_my_btn" />

    <ImageButton
        android:id="@+id/rsfsr_my_btn"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/btns"
        android:paddingBottom="45dp"
        android:paddingTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/rsfsr_preview"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintTop_toBottomOf="@id/ri_my_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.47" />

    <TextView
        android:id="@+id/series_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RSFSR"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:fontFamily="@font/comfortaa_medium"
        app:layout_constraintBottom_toBottomOf="@id/rsfsr_my_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
